Looking at asset share via library.
Simplify project web content.

--- a/src/ForDesk/Shared/MainLayout.razor
+++ b/src/ForDesk/Shared/MainLayout.razor
@@ -1,20 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
-<menu>
-	<ul>
-		<li>
-			<NavLink href="" Match="NavLinkMatch.All">
-				Home
-			</NavLink>
-		</li>
-		<li>
-			<NavLink href="/counter">
-				Counter
-			</NavLink>
-		</li>
-	</ul>
+<menu class="sidebar">
+	<NavMenu />
 </menu>
 
-<main>
-	@Body
+<main class="main">
+	<div class="top-row px-4">
+		<a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+	</div>
+
+	<div class="content px-4">
+		@Body
+	</div>
 </main>
