--- a/src/ForServer/Pages/Index.razor
+++ b/src/ForServer/Pages/Index.razor
@@ -5,3 +5,6 @@
 Welcome to BoxOBlazor For Server.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<a href="/demo/interop">Interop demo</a>
+
