--- a/src/ForServer/Pages/_Host.cshtml
+++ b/src/ForServer/Pages/_Host.cshtml
@@ -10,9 +10,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ForServer</title>
+    <title>BagOBlazor - ForServer</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+
+    <script src="_framework/blazor.server.js" defer></script>
+
+    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
@@ -31,6 +36,6 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="_framework/blazor.server.js"></script>
+    
 </body>
 </html>
