--- a/src/ForBrowser/Shared/NavMenu.razor
+++ b/src/ForBrowser/Shared/NavMenu.razor
@@ -12,6 +12,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+	    <li class="nav-item px-3">
+		    <NavLink class="nav-link" href="demo/interop">
+			    <span class="oi oi-account-login" aria-hidden="true"></span>
+                JS Interop
+		    </NavLink>
+	    </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
