--- a/src/ForDesk/Pages/Index.razor
+++ b/src/ForDesk/Pages/Index.razor
@@ -3,3 +3,10 @@
 <h1>Hello, world!</h1>
 
 Welcome to BoxOBlazor For Desk.
+
+<p>
+	This Demo is using
+	<a href="https://github.com/SteveSandersonMS/WebWindow">
+		WebWindow
+	</a> from Steve Sanderson
+</p>
