Moving NamePrompt to bcl.
Nove site styles to bcl.
Neater structure for blazor files.

--- a/src/ForBrowser/_Imports.razor
+++ b/src/ForBrowser/_Imports.razor
@@ -3,5 +3,9 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+
 @using ForBrowser
 @using ForBrowser.Shared
+
+@using kwd.BoxOBlazor
+@using kwd.BoxOBlazor.Parts
