--- a/src/ForServer/Pages/Shared/_Layout.cshtml
+++ b/src/ForServer/Pages/Shared/_Layout.cshtml
@@ -11,9 +11,8 @@
 	@*Using asset from shared lib*@
 	<link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
 	<link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+	<link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
 
-	<link href="~/css/site.min.css" rel="stylesheet" />
-	
 	<style>
 		#main-menu {
 			padding-inline-start: 0;
