--- a/src/ForServer/Pages/_Imports.razor
+++ b/src/ForServer/Pages/_Imports.razor
@@ -5,5 +5,9 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+
 @using ForServer
-@using ForServer.Shared
+@using ForServer.Pages.Shared
+
+@using kwd.BoxOBlazor
+@using kwd.BoxOBlazor.Parts
