--- a/src/ForServer/Pages/_ViewImports.cshtml
+++ b/src/ForServer/Pages/_ViewImports.cshtml
@@ -1,2 +1,7 @@
-﻿
+﻿@using ForServer
+@using ForServer.Pages.Shared
+@using ForServer.Pages.Parts
+
+@using kwd.BoxOBlazor.Parts
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
