--- a/src/ForDesk/Shared/MainLayout.razor
+++ b/src/ForDesk/Shared/MainLayout.razor
@@ -1,8 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<menu class="sidebar">
+<div class="sidebar">
 	<NavMenu />
-</menu>
+</div>
 
 <main class="main">
 	<div class="top-row px-4">
