--- a/src/ForServer/Pages/_Host.cshtml
+++ b/src/ForServer/Pages/_Host.cshtml
@@ -1,6 +1,5 @@
 ﻿@page "/"
 @namespace ForServer.Pages
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
 }
@@ -8,17 +7,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BagOBlazor - ForServer</title>
-    <base href="~/" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>BagOBlazor - ForServer</title>
+	<base href="~/" />
 
-    <script src="_framework/blazor.server.js" defer></script>
+	<script src="_framework/blazor.server.js" defer></script>
 
-    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+	<link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+	<link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
 
-    <link href="css/site.css" rel="stylesheet" />
+	<link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
+    
+	<link href="css/forServer.min.css" rel="stylesheet" />
 </head>
 <body>
     <app>
@@ -32,10 +33,8 @@
         <environment include="Development">
             An unhandled exception has occurred. See browser dev tools for details.
         </environment>
-        <a href="" class="reload">Reload</a>
+        <a href="">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
-    
 </body>
 </html>
