--- a/src/ForServer/Pages/Shared/NavMenu.razor
+++ b/src/ForServer/Pages/Shared/NavMenu.razor
@@ -19,6 +19,12 @@
 			</NavLink>
 		</li>
 		<li class="nav-item px-3">
+			<NavLink class="nav-link" href="colortool">
+				<span class="oi oi-account-login" aria-hidden="true"></span>
+				Color tool
+			</NavLink>
+		</li>
+		<li class="nav-item px-3">
 			<NavLink class="nav-link" href="counter">
 				<span class="oi oi-plus" aria-hidden="true"></span> Counter
 			</NavLink>
