Add some future todo's

--- a/src/ForServer/Pages/ColorTool.razor
+++ b/src/ForServer/Pages/ColorTool.razor
@@ -2,28 +2,39 @@
 @using kwd.BoxOBlazor.Unit
 @using kwd.BoxOBlazor.Util
 
+@*
+ # todo
+    Use colored slider bar(s) for values.
+    Save current color to browser storage.
+    Move to component; and share on other platforms.
+    Use timer to trigger data update without need to blur.
+*@
+
+
 <p>A simple tool to help with color selection</p>
 
-<p style="background-color: @Hex; color: @Contrast()" >Color: @Hex</p>
+<p style="background-color: @Hex; color: @Contrast()">Color: @Hex</p>
 <p>
-	Hex:<input value="@Hex" @onchange="HexColorChanged"/>
+    Hex:<input value="@Hex" @onchange="HexColorChanged" />
 </p>
 
-<p>RGB:
-	<input type="number" max="255" min="0" name="@nameof(Red)" value="@Red"
-               @onchange="@(e => RGBValueChanged(e, nameof(Red)))"/> 
-	/ <input type="number" max="255" min="0" name="@nameof(Green)" value="@Green"
-	         @onchange="@(e => RGBValueChanged(e, nameof(Green)))"/>
-	/ <input type="number" max="255" min="0" name="@nameof(Blue)" value="@Blue"
-	         @onchange="@(e => RGBValueChanged(e, nameof(Blue)))"/>
+<p>
+    RGB:
+    <input type="number" max="255" min="0" name="@nameof(Red)" value="@Red"
+           @onchange="@(e => RGBValueChanged(e, nameof(Red)))" />
+    / <input type="number" max="255" min="0" name="@nameof(Green)" value="@Green"
+             @onchange="@(e => RGBValueChanged(e, nameof(Green)))" />
+    / <input type="number" max="255" min="0" name="@nameof(Blue)" value="@Blue"
+             @onchange="@(e => RGBValueChanged(e, nameof(Blue)))" />
 </p>
-<p>HSL:
-	<input type="number" min="0" max="359" name="@nameof(Hue)" value="@Hue"
-	       @onchange="@(e => HSLChanged(e, nameof(Hue)))"/>
-	/ <input type="number" min="0" max="100"  name="@nameof(Saturation)" value="@Saturation"
-	         @onchange="@(e => HSLChanged(e, nameof(Saturation)))"/>%
-	/ <input type="number" min="0" max="100"  name="@nameof(Lightness)" value="@Lightness"
-	         @onchange="@(e => HSLChanged(e, nameof(Lightness)))"/>%
+<p>
+    HSL:
+    <input type="number" min="0" max="359" name="@nameof(Hue)" value="@Hue"
+           @onchange="@(e => HSLChanged(e, nameof(Hue)))" />
+    / <input type="number" min="0" max="100" name="@nameof(Saturation)" value="@Saturation"
+             @onchange="@(e => HSLChanged(e, nameof(Saturation)))" />%
+    / <input type="number" min="0" max="100" name="@nameof(Lightness)" value="@Lightness"
+             @onchange="@(e => HSLChanged(e, nameof(Lightness)))" />%
 </p>
 
 @code {
@@ -48,7 +59,7 @@
 
     protected void HexColorChanged(ChangeEventArgs args)
     {
-        var txt  = args.Value.ToString();
+        var txt = args.Value.ToString();
         (Red, Green, Blue) = ColorHelper.HexToRgb(txt);
 
         UpdateHSLFromRgb();
@@ -57,8 +68,8 @@
     protected void RGBValueChanged(ChangeEventArgs args, string part)
     {
         var val = int.Parse(args.Value.ToString());
-        if (val > 255){ val = 255; StateHasChanged();}
-        if (val < 0){val = 0; StateHasChanged();}
+        if (val > 255) { val = 255; StateHasChanged(); }
+        if (val < 0) { val = 0; StateHasChanged(); }
 
         switch (part)
         {
@@ -90,18 +101,18 @@
         }
 
         (Red, Green, Blue) =
-            ColorHelper.HSLToRGB(Hue, Saturation.Value/100, Lightness.Value/100);
+            ColorHelper.HSLToRGB(Hue, Saturation.Value / 100, Lightness.Value / 100);
 
         Hex = ColorHelper.RGBToHex(Red, Green, Blue);
     }
 
     private Percent ReadPercent(string txtValue)
     {
-        var val = float.Parse(txtValue)*100;
+        var val = float.Parse(txtValue) * 100;
         if (val < 0)
-        { val = 0;}
+        { val = 0; }
         if (val > 10000)
-        { val = 10000;}
+        { val = 10000; }
 
         return new Percent(val / 100);
     }
@@ -109,10 +120,10 @@
     private int ReadDegree(string txtValue)
     {
         var val = int.Parse(txtValue);
-        if(val < 0)
-        { val = 0;}
+        if (val < 0)
+        { val = 0; }
         if (val > 359)
-        {val = 359;}
+        { val = 359; }
 
         return val;
     }
@@ -130,8 +141,8 @@
         var hsl = ColorHelper.RGBToHSL(Red, Green, Blue);
 
         Hue = hsl.Hue;
-        Saturation = new Percent(hsl.Saturation*100);
-        Lightness = new Percent(hsl.Lightness*100);
+        Saturation = new Percent(hsl.Saturation * 100);
+        Lightness = new Percent(hsl.Lightness * 100);
     }
 
     /* Other tools
