Adding server event demo: alarm clock

--- a/src/ForServer/Pages/Index.razor
+++ b/src/ForServer/Pages/Index.razor
@@ -6,5 +6,7 @@ Welcome to BoxOBlazor For Server.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 
-<a href="/demo/interop">Interop demo</a>
-
+<section>
+    <h2>Useful links</h2>
+    <Links />
+</section>
