--- a/src/ForServer/Pages/_Imports.razor
+++ b/src/ForServer/Pages/_Imports.razor
@@ -7,7 +7,9 @@
 @using Microsoft.JSInterop
 
 @using ForServer
+@using ForServer.Services
 @using ForServer.Pages.Shared
+@using ForServer.Pages.Parts
 
 @using kwd.BoxOBlazor
 @using kwd.BoxOBlazor.Parts
