--- a/src/ForServer/Pages/Shared/NavMenu.razor
+++ b/src/ForServer/Pages/Shared/NavMenu.razor
@@ -13,9 +13,9 @@
 			</NavLink>
 		</li>
 		<li class="nav-item px-3">
-			<NavLink class="nav-link" href="demo/interop">
+			<NavLink class="nav-link" href="demo/">
 				<span class="oi oi-account-login" aria-hidden="true"></span>
-				JS Interop
+				Blazor in Razor
 			</NavLink>
 		</li>
 		<li class="nav-item px-3">
