--- a/src/ForServer/Pages/Shared/_Nav.cshtml
+++ b/src/ForServer/Pages/Shared/_Nav.cshtml
@@ -8,12 +8,28 @@
 </div>
 
 <menu id="main-menu">
-	<ul class="nav flex-column">
-		<li class="nav-item px-3">
-			<a href="~/" class="nav-link">
-				<span class="oi oi-home" aria-hidden="true"></span> 
-				Blazor SPA
-			</a>
-		</li>
-	</ul>
+    <ul class="nav flex-column">
+        <li class="nav-item px-3">
+            <a href="~/" class="nav-link">
+                <span class="oi oi-home" aria-hidden="true"></span>
+                Blazor SPA
+            </a>
+        </li>
+
+        <li class="nav-item px-3">
+            <a href="~/Demo/Interop" class="nav-link">
+                <span class="oi oi-audio-spectrum" aria-hidden="true"></span>
+                JS Interop
+            </a>
+        </li>
+
+        <li class="nav-item px-3">
+            <a href="~/Demo/ServerEvents" class="nav-link">
+                <div class="oi linkIcon">
+                    <img class="icon" src="img/alarmClock.svg" aria-hidden="true" />
+                </div>
+                Alarm clock
+            </a>
+        </li>
+    </ul>
 </menu>
