--- a/src/ForServer/Web/css/forServer.less
+++ b/src/ForServer/Web/css/forServer.less
@@ -3,3 +3,17 @@
 :root {
 	--main-bg-color: @svr-main-color;
 }
+
+#main-menu {
+	padding-inline-start: 0;
+	margin-block-start: 0;
+	margin-block-end: 0;
+}
+
+.sidebar {
+	.linkIcon {
+		img {
+			width: 1.1em;
+		}
+	}
+}
