--- a/src/ForServer/Pages/Shared/_Nav.cshtml
+++ b/src/ForServer/Pages/Shared/_Nav.cshtml
@@ -1,9 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<div class="top-row pl-4 navbar navbar-dark">
+﻿<div class="top-row pl-4 navbar navbar-dark">
 	<a class="navbar-brand" href="">ForServer</a>
 </div>
 
@@ -29,6 +24,14 @@
                     <img class="icon" src="img/alarmClock.svg" aria-hidden="true" />
                 </div>
                 Alarm clock
+            </a>
+        </li>
+        <li class="nav-item px-3">
+            <a href="~/Demo/LogView" class="nav-link">
+                <div class="oi linkIcon">
+                    <img class="icon" src="img/log.svg" aria-hidden="true" />
+                </div>
+                Log viewer
             </a>
         </li>
     </ul>
