--- a/src/ForServer/Pages/_Imports.razor
+++ b/src/ForServer/Pages/_Imports.razor
@@ -8,6 +8,7 @@
 
 @using ForServer
 @using ForServer.Services
+@using ForServer.Services.Logging
 @using ForServer.Pages.Shared
 @using ForServer.Pages.Parts
 
