--- a/src/ForBrowser/_Imports.razor
+++ b/src/ForBrowser/_Imports.razor
@@ -4,8 +4,12 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 
+@using Microsoft.Extensions.Logging
+
 @using ForBrowser
+@using ForBrowser.Model
 @using ForBrowser.Shared
+@using ForBrowser.Pages.Parts
 
 @using kwd.BoxOBlazor
 @using kwd.BoxOBlazor.Parts
