--- a/src/ForServer/Pages/Demo/ServerEvents.cshtml
+++ b/src/ForServer/Pages/Demo/ServerEvents.cshtml
@@ -9,6 +9,7 @@
 <h1>Demo server-generated events in UI.</h1>
 
 <p>
-    A simple clock.
+    A simple clock to show server generated events presented in a Blazor
+    component.
 </p>
 <component type="typeof(AlarmClock)" render-mode="ServerPrerendered" />
