--- a/src/ForBrowser/Pages/Index.razor
+++ b/src/ForBrowser/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
+@inject Microsoft.Extensions.Configuration.IConfiguration config;
 
 <h1>Hello, world!</h1>
 
-Welcome to BoxOBlazor For Browser.
+Welcome to @config["Title"].
 
 <SurveyPrompt Title="How is Blazor working for you?" />
