--- a/src/ForBrowser/Shared/NavMenu.razor
+++ b/src/ForBrowser/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Microsoft.Extensions.Configuration
+@inject ServerAssets Assets;
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">ForBrowser</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -12,12 +14,34 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-	    <li class="nav-item px-3">
-		    <NavLink class="nav-link" href="demo/interop">
-			    <span class="oi oi-account-login" aria-hidden="true"></span>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="demo/interop">
+                <span class="oi oi-audio-spectrum" aria-hidden="true"></span>
                 JS Interop
-		    </NavLink>
-	    </li>
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="demo/colortool">
+                <span class="oi oi-fire" aria-hidden="true"></span>
+                Color tool
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="demo/TimingEvents">
+                <div class="oi linkIcon">
+                    <img class="icon" src="@Assets.ClockImg" aria-hidden="true" />
+                </div>
+                Alarm Clock
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="demo/LogView">
+                <div class="oi linkIcon">
+                    <img class="icon" src="@imgLog" aria-hidden="true" />
+                </div>
+                Log View
+            </NavLink>
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
@@ -32,6 +56,9 @@
 </div>
 
 @code {
+
+    public const string imgLog = "_content/kwd.BoxOBlazor/img/log.svg";
+    
     private bool collapseNavMenu = true;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
