--- a/src/kwd.BoxOBlazor/Parts/MemoryLogViewer.razor
+++ b/src/kwd.BoxOBlazor/Parts/MemoryLogViewer.razor
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Extensions.Logging
+﻿@using kwd.BoxOBlazor.Services.Logging
+@using Microsoft.Extensions.Logging
 @inject MemoryLogger memLogger
 @implements IDisposable
 
@@ -47,7 +48,7 @@
 </ol>
 
 @code {
-
+    
     public void Dispose()
     {
         memLogger.ItemsUpdated -= OnMemoryLoggerUpdates;
