Re-structure blazor spa files.

--- a/src/ForBrowser/Pages/Demo/AlarmClock.razor
+++ b/src/ForBrowser/Pages/Demo/AlarmClock.razor
@@ -1,9 +1,9 @@
-﻿@page "/demo/TimingEvents"
+﻿@page "/demo/AlarmClock"
 <h3>Timed events demo</h3>
 
 <p>Use timer(s) to get periodic events.</p>
 
-<AlarmClock />
+<UpTime />
 
 @code {
 }
