--- a/src/ForBrowser/Shared/NavMenu.razor
+++ b/src/ForBrowser/Shared/NavMenu.razor
@@ -27,7 +27,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="demo/TimingEvents">
+            <NavLink class="nav-link" href="demo/AlarmClock">
                 <div class="oi linkIcon">
                     <img class="icon" src="@Assets.ClockImg" aria-hidden="true" />
                 </div>
