--- a/src/ForServer/Pages/Demo/AlarmClock.cshtml
+++ b/src/ForServer/Pages/Demo/AlarmClock.cshtml
@@ -12,4 +12,4 @@
     A simple clock to show server generated events presented in a Blazor
     component.
 </p>
-<component type="typeof(AlarmClock)" render-mode="ServerPrerendered" />
+<component type="typeof(UpTime)" render-mode="ServerPrerendered" />
