--- a/src/ForServer/Pages/_Imports.razor
+++ b/src/ForServer/Pages/_Imports.razor
@@ -6,9 +6,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 
+@using Microsoft.Extensions.Logging
+
 @using ForServer
 @using ForServer.Services
-@using ForServer.Pages.Shared
 @using ForServer.Pages.Parts
 
 @using kwd.BoxOBlazor
