--- a/src/ForServer/Pages/Shared/_Nav.cshtml
+++ b/src/ForServer/Pages/Shared/_Nav.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using ForServer.Pages.Shared
+@{
     var imgLog = "_content/kwd.BoxOBlazor/img/log.svg";
 }
 <div class="top-row pl-4 navbar navbar-dark">
@@ -10,10 +11,15 @@
         <li class="nav-item px-3">
             <a href="~/" class="nav-link">
                 <span class="oi oi-home" aria-hidden="true"></span>
+                Home
+            </a>
+        </li>
+        <li class="nav-item px-3">
+            <a href="~/Spa" class="nav-link">
+                <span class="oi oi-loop" aria-hidden="true"></span>
                 Blazor SPA
             </a>
         </li>
-
         <li class="nav-item px-3">
             <a href="~/Demo/Interop" class="nav-link">
                 <span class="oi oi-audio-spectrum" aria-hidden="true"></span>
@@ -27,13 +33,21 @@
             </a>
         </li>
         <li class="nav-item px-3">
-            <a href="~/Demo/ServerEvents" class="nav-link">
+            <a href="~/Demo/AlarmClock" class="nav-link">
                 <div class="oi linkIcon">
                     <img class="icon" src="img/alarmClock.svg" aria-hidden="true" />
                 </div>
                 Alarm clock
             </a>
         </li>
+
+        <li class="nav-item px-3">
+            <a href="~/Demo/Misbehave" class="nav-link">
+                <span class="oi oi-warning" aria-hidden="true"></span>
+                Misbehave
+            </a>
+        </li>
+
         <li class="nav-item px-3">
             <a href="~/Demo/LogView" class="nav-link">
                 <div class="oi linkIcon">
