--- a/src/ForServer/Pages/Spa/Shared/NavMenu.razor
+++ b/src/ForServer/Pages/Spa/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="demo/">
+            <NavLink class="nav-link" href="~/demo/">
                 <span class="oi oi-loop" aria-hidden="true"></span>
                 Blazor in Razor
             </NavLink>
