Fix spa uri needs to be base relative.

--- a/src/ForServer/Pages/Spa/AlarmClock.razor
+++ b/src/ForServer/Pages/Spa/AlarmClock.razor
@@ -6,5 +6,5 @@
 <UpTime />
 
 @code {
-        public const string Path = "/spa/AlarmClock";
+        public const string Path = "spa/AlarmClock";
 }
