--- a/src/ForServer/Pages/Spa/ColorTool.razor
+++ b/src/ForServer/Pages/Spa/ColorTool.razor
@@ -7,5 +7,5 @@
 <ColorPicker />
 
 @code {
-        public const string Path = "/spa/ColorTool";
+        public const string Path = "spa/ColorTool";
 }
