--- a/src/ForServer/Pages/Spa/Interop.razor
+++ b/src/ForServer/Pages/Spa/Interop.razor
@@ -8,7 +8,7 @@
     <NamePrompt />
 </p>
 @code {
-    public const string Path = "/spa/interop";
+    public const string Path = "spa/interop";
 
     protected override Task OnInitializedAsync()
     {
