--- a/src/ForServer/Pages/Spa/Shared/NavMenu.razor
+++ b/src/ForServer/Pages/Spa/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Http.Extensions
+@inject NavigationManager nav;
+<div class="top-row pl-4 navbar navbar-dark">
 	<a class="navbar-brand" href="/">ForServer</a>
 	<button class="navbar-toggler" @onclick="ToggleNavMenu">
 		<span class="navbar-toggler-icon"></span>
@@ -13,7 +15,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="~/demo/">
+            <NavLink class="nav-link" href="demo">
                 <span class="oi oi-loop" aria-hidden="true"></span>
                 Blazor in Razor
             </NavLink>
