TRy fix publish including unwanted tsconfig.json

--- a/src/ForServer/Pages/Spa.cshtml
+++ b/src/ForServer/Pages/Spa.cshtml
@@ -10,7 +10,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BagOBlazor - ForServer</title>
-    <base href="~/spa" />
+    <base href="~/" />
 
     <script src="_framework/blazor.server.js" defer></script>
 
