--- a/src/ForServer/Pages/Index.cshtml
+++ b/src/ForServer/Pages/Index.cshtml
@@ -1,10 +1,19 @@
 ﻿@page
-@{}
+@{
+    Layout = "Shared/_LayoutClassic";
+}
 <p>
-    A normal razor based home page.
+    Welcome.
 </p>
-
 <p>
-    This doesn't host a razor component. 
-    It represents a standard asp.net mvc or pages based page.
+    This project is my playground for various 
+    experiments; focused mostly on blazor.
+</p>
+<p>
+    Source is up on 
+    <a href="https://github.com/Dkowald/kwd.BoxOBlazor">GitHub - BoxOBlazor</a>
+</p>
+<p>
+    The site is also deployed to a little linux box on azure, 
+    <a href="https://boxoblazor.kwd.space/">here</a>.
 </p>
