--- a/src/ForBrowser/Pages/FetchData.razor
+++ b/src/ForBrowser/Pages/FetchData.razor
@@ -1,4 +1,5 @@
 ﻿@page "/fetchdata"
+@using System.Net.Http.Json
 @inject HttpClient Http
 
 <h1>Weather forecast</h1>
@@ -39,17 +40,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
-    }
-
-    public class WeatherForecast
-    {
-        public DateTime Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public string Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        forecasts = await Http
+            .GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
     }
 }
