Outline of service for local storage.

--- a/src/ForBrowser/Shared/NavMenu.razor
+++ b/src/ForBrowser/Shared/NavMenu.razor
@@ -43,6 +43,12 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="demo/LocalStore">
+                <span class="oi oi-browser" aria-hidden="true"></span>
+                Local store
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
