--- a/src/ForServer/Pages/Parts/Links.razor
+++ b/src/ForServer/Pages/Parts/Links.razor
@@ -4,6 +4,11 @@
         Blazor</a>
 </p>
 
+<p>
+    Catalog of various Blazor projects: 
+    <a href="https://github.com/AdrienTorris/awesome-blazor">Awsome Blazor</a>.
+    Greate for pointers.
+</p>
 @code {
 
 }
