--- a/src/ForServer/Pages/Shared/_LayoutNoBlazor.cshtml
+++ b/src/ForServer/Pages/Shared/_LayoutNoBlazor.cshtml
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BagOBlazor - For Server</title>
-    
-    @RenderSection("_layout_head", false)
+
+    @await RenderSectionAsync("_layout_head", false)
 
     @*Using asset from shared lib*@
     <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
@@ -14,8 +14,8 @@
     <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
 	
     <link href="css/forServer.css" rel="stylesheet" />
-    
-    @RenderSection("Head", false)
+
+    @await RenderSectionAsync("Head", false)
 </head>
 <body style="display: flex; flex-direction: row; position: relative;">
 <partial name="_ConnectionStatus"/>
