--- a/src/ForServer/Pages/Shared/_Nav.cshtml
+++ b/src/ForServer/Pages/Shared/_Nav.cshtml
@@ -55,5 +55,12 @@
                 Log viewer
             </a>
         </li>
+
+        <li class="nav-item px-3">
+            <a href="~/Demo/LocalStorage" class="nav-link">
+                <span class="oi oi-browser" aria-hidden="true"></span>
+                Local storage
+            </a>
+        </li>
     </ul>
 </menu>
