--- a/src/ForServer/Pages/Spa.cshtml
+++ b/src/ForServer/Pages/Spa.cshtml
@@ -16,9 +16,9 @@
 
     <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
-
     <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
-    
+    <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
+
     <link href="css/forServer.min.css" rel="stylesheet" />
 </head>
 <body>
