--- a/src/ForBrowser/App.razor
+++ b/src/ForBrowser/App.razor
@@ -1,3 +1,5 @@
+@inject LocalStorage localStorage
+
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -8,3 +10,14 @@
         </LayoutView>
     </NotFound>
 </Router>
+@code {
+
+    protected override async Task OnInitializedAsync()
+    {
+        if (!localStorage.IsStorageEventAttached)
+            await localStorage.HookStorageEvent();
+
+        await base.OnInitializedAsync();
+    }
+
+}
