--- a/src/ForServer/Pages/Parts/UpTime.razor
+++ b/src/ForServer/Pages/Parts/UpTime.razor
@@ -1,6 +1,7 @@
 ﻿@inject AppState state;
 @inject ILogger<UpTime> log;
 @using Microsoft.Extensions.Logging
+@using ForServer.Model
 @implements IDisposable
 <p>
     Current time : @Current
