--- a/src/ForServer/Pages/Spa/Shared/NavMenu.razor
+++ b/src/ForServer/Pages/Spa/Shared/NavMenu.razor
@@ -64,6 +64,13 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="@LocalStorage.Path">
+                <span class="oi oi-browser" aria-hidden="true"></span> 
+                Browser storage
+            </NavLink>
+        </li>
     </ul>
 </div>
 
