Add payload to js local storage events.
Update to blazor wasm rc1.

--- a/src/ForServer/Pages/Shared/_Layout.cshtml
+++ b/src/ForServer/Pages/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 	<base href="~/" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>BagOBlazor - For Server</title>
+	<title>BoxOBlazor - For Server</title>
 
 	<script src="~/_framework/blazor.server.js" defer></script>
 
