--- a/src/ForServer/Pages/_Host.cshtml
+++ b/src/ForServer/Pages/_Host.cshtml
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>BagOBlazor - ForServer</title>
+	<title>BoxOBlazor - ForServer</title>
 	<base href="~/" />
 
 	<script src="_framework/blazor.server.js" defer></script>
