--- a/src/ForBrowser/App.razor
+++ b/src/ForBrowser/App.razor
@@ -1,3 +1,5 @@
+@using kwd.BoxOBlazor.Web.scripts.util
+@using kwd.BoxOBlazor.Web.util
 @inject LocalStorage localStorage
 
 <Router AppAssembly="@typeof(Program).Assembly">
