Separate demo lib.
Serve wasm from main demo site.

--- a/src/ForBrowser/App.razor
+++ b/src/ForBrowser/App.razor
@@ -1,5 +1,4 @@
-@using kwd.BoxOBlazor.Web.scripts.util
-@using kwd.BoxOBlazor.Web.util
+@using kwd.BoxOBlazor.Demo.Web.util
 @inject LocalStorage localStorage
 
 <Router AppAssembly="@typeof(Program).Assembly">
