--- a/src/ForServer/Pages/Shared/_LayoutNoBlazor.cshtml
+++ b/src/ForServer/Pages/Shared/_LayoutNoBlazor.cshtml
@@ -7,11 +7,8 @@
     <title>BoxOBlazor - For Server</title>
 
     @await RenderSectionAsync("_layout_head", false)
-
-    @*Using asset from shared lib*@
-    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
-    <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
+    
+    <partial name="_BoxOBlazorAssets"/>
 	
     <link href="css/forServer.css" rel="stylesheet" />
 
