--- a/src/ForServer/Pages/Spa.cshtml
+++ b/src/ForServer/Pages/Spa.cshtml
@@ -13,11 +13,8 @@
     <base href="~/" />
 
     <script src="_framework/blazor.server.js" defer></script>
-
-    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
-    <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
-    <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
+    
+    <partial name="Shared/_BoxOBlazorAssets"/>
 
     <link href="css/forServer.min.css" rel="stylesheet" />
 </head>
