--- a/src/kwd.BoxOBlazor.Demo/Parts/BrowserStorage.razor
+++ b/src/kwd.BoxOBlazor.Demo/Parts/BrowserStorage.razor
@@ -1,6 +1,4 @@
-﻿@using kwd.BoxOBlazor.Services
-@using kwd.BoxOBlazor.Web.scripts.util
-@using kwd.BoxOBlazor.Web.util
+﻿@using kwd.BoxOBlazor.Demo.Web.util
 @inject LocalStorage localStorage
 @inject ILogger<LocalStorage> log
 @implements IDisposable
