--- a/src/kwd.BoxOBlazor.Demo/Parts/ColorPicker.razor
+++ b/src/kwd.BoxOBlazor.Demo/Parts/ColorPicker.razor
@@ -1,6 +1,6 @@
-﻿@using kwd.BoxOBlazor.Unit;
-@using kwd.BoxOBlazor.Util;
-@using Microsoft.Extensions.Logging
+﻿@using Microsoft.Extensions.Logging
+@using kwd.BoxOBlazor.Demo.Unit
+@using kwd.BoxOBlazor.Util
 @inject ILogger<ColorPicker> Log;
 @*
     # todo
