--- a/src/kwd.BoxOBlazor.Demo/Parts/MemLog/MemoryLogViewer.razor
+++ b/src/kwd.BoxOBlazor.Demo/Parts/MemLog/MemoryLogViewer.razor
@@ -1,5 +1,4 @@
-﻿@using kwd.BoxOBlazor.Services.Logging
-@using Microsoft.Extensions.Logging
+﻿@using Microsoft.Extensions.Logging
 @inject MemoryLogger memLogger
 @implements IDisposable
 
