--- a/src/ForBrowser/_Imports.razor
+++ b/src/ForBrowser/_Imports.razor
@@ -11,6 +11,5 @@
 @using ForBrowser.Shared
 @using ForBrowser.Pages.Parts
 
-@using kwd.BoxOBlazor
-@using kwd.BoxOBlazor.Parts
-@using kwd.BoxOBlazor.Services
+@using kwd.BoxOBlazor.Demo.Parts
+@using kwd.BoxOBlazor.Demo.Parts.MemLog
