--- a/src/ForServer/Pages/Shared/_Layout.cshtml
+++ b/src/ForServer/Pages/Shared/_Layout.cshtml
@@ -7,12 +7,8 @@
 	<title>BoxOBlazor - For Server</title>
 
 	<script src="~/_framework/blazor.server.js" defer></script>
-
-	@*Using asset from shared lib*@
-	<link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-	<link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
-	<link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
-    <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
+    
+    <partial name="_BoxOBlazorAssets"/>
 
     <link href="css/forServer.css" rel="stylesheet" />
 
