--- a/src/ForServer/Pages/Shared/_Nav.cshtml
+++ b/src/ForServer/Pages/Shared/_Nav.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var imgLog = "_content/kwd.BoxOBlazor/img/log.svg";
+    var imgLog = "_content/kwd.BoxOBlazor.Demo/img/log.svg";
 }
 <div class="top-row pl-4 navbar navbar-dark">
 	<a class="navbar-brand" href="">ForServer</a>
