--- a/src/ForServer/Pages/_Imports.razor
+++ b/src/ForServer/Pages/_Imports.razor
@@ -12,5 +12,5 @@
 @using ForServer.Services
 @using ForServer.Pages.Parts
 
-@using kwd.BoxOBlazor
-@using kwd.BoxOBlazor.Parts
+@using kwd.BoxOBlazor.Demo.Parts;
+@using kwd.BoxOBlazor.Demo.Parts.MemLog;
