--- a/src/ForServer/Pages/_ViewImports.cshtml
+++ b/src/ForServer/Pages/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ForServer
 @using ForServer.Pages.Parts
 
-@using kwd.BoxOBlazor.Parts
+@using kwd.BoxOBlazor.Demo.Parts
+@using kwd.BoxOBlazor.Demo.Parts.MemLog
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
