--- a/src/ForBrowser/Pages/Demo/LogView.razor
+++ b/src/ForBrowser/Pages/Demo/LogView.razor
@@ -1,5 +1,6 @@
 ﻿@page "/demo/LogView"
 @using Microsoft.Extensions.Logging;
+@using kwd.BoxOBlazor.Demo.Parts.MemLog;
 @inject ILogger<LogView> Log;
 <h1>Demo logging</h1>
 
