--- a/src/ForServer/Pages/Demo/LocalStorage.cshtml
+++ b/src/ForServer/Pages/Demo/LocalStorage.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using kwd.BoxOBlazor.Demo.Parts.ClientSideStorage
 <h1>Demo Local storage</h1>
 
 <component type="@typeof(BrowserStorage)" render-mode="ServerPrerendered" />
