--- a/src/kwd.BoxOBlazor.Demo/Parts/ClientSideStorage/BrowserStorage.razor
+++ b/src/kwd.BoxOBlazor.Demo/Parts/ClientSideStorage/BrowserStorage.razor
@@ -1,4 +1,4 @@
-﻿@using kwd.BoxOBlazor.Demo.Web.util
+﻿@using kwd.BoxOBlazor.Demo.util
 @inject LocalStorage localStorage
 @inject ILogger<LocalStorage> log
 @implements IDisposable
