--- a/src/ForBrowser/App.razor
+++ b/src/ForBrowser/App.razor
@@ -1,4 +1,4 @@
-@using kwd.BoxOBlazor.Demo.Web.util
+@using kwd.BoxOBlazor.Demo.util
 @inject LocalStorage localStorage
 
 <Router AppAssembly="@typeof(Program).Assembly">
