Moved UITimer and AlarmClock to shared demo project.

--- a/src/ForBrowser/App.razor
+++ b/src/ForBrowser/App.razor
@@ -1,4 +1,5 @@
 @using kwd.BoxOBlazor.Demo.util
+@using kwd.BoxOBlazor.Demo.util.ClientSideStorage
 @inject LocalStorage localStorage
 
 <Router AppAssembly="@typeof(Program).Assembly">
