--- a/src/ForBrowser/Shared/NavMenu.razor
+++ b/src/ForBrowser/Shared/NavMenu.razor
@@ -63,7 +63,7 @@
 
 @code {
 
-    public const string imgLog = "_content/kwd.BoxOBlazor/img/log.svg";
+    public const string imgLog = "_content/kwd.BoxOBlazor.Demo/img/log.svg";
     
     private bool collapseNavMenu = true;
 
