--- a/src/ForDesk/Pages/Demo/Interop.razor
+++ b/src/ForDesk/Pages/Demo/Interop.razor
@@ -1,4 +1,5 @@
 ﻿@page "/demo/interop"
+@using kwd.BoxOBlazor.Demo.Parts;
 <h1>Demo interop with Javascript</h1>
 <p>Currently broken;
 	need to work out how to reference js from library.</p>
