--- a/src/ForServer/Pages/_ViewImports.cshtml
+++ b/src/ForServer/Pages/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using ForServer
+﻿@using Microsoft.Extensions.Logging
+
+@using ForServer
 @using ForServer.Pages.Parts
 
 @using kwd.BoxOBlazor.Demo.Parts
