--- a/src/kwd.BoxOBlazor.Demo/Parts/ClientSideStorage/BrowserStorage.razor
+++ b/src/kwd.BoxOBlazor.Demo/Parts/ClientSideStorage/BrowserStorage.razor
@@ -1,4 +1,5 @@
 ﻿@using kwd.BoxOBlazor.Demo.util
+@using kwd.BoxOBlazor.Demo.util.ClientSideStorage
 @inject LocalStorage localStorage
 @inject ILogger<LocalStorage> log
 @implements IDisposable
