--- a/src/kwd.BoxOBlazor.Demo/Parts/UpTime.razor
+++ b/src/kwd.BoxOBlazor.Demo/Parts/UpTime.razor
@@ -1,18 +1,21 @@
-﻿@inject AppState state;
+﻿@inject kwd.BoxOBlazor.Demo.Model.AppState state;
 @inject ILogger<UpTime> log;
 @using Microsoft.Extensions.Logging
-@using ForServer.Model
 @implements IDisposable
 <p>
     Current time : @Current
 </p>
 <p>
-    Server up-time : @Uptime 
+    @UpTimeLabel : @Uptime
 </p>
 
 @code {
     private string Current;
     private string Uptime;
+
+    [Parameter]
+    public string UpTimeLabel { get; set; } 
+        = "Browser app up-time";
 
     protected override void OnInitialized()
     {
