Publish on build for easier developer hosting.
WASM Publish includes re-writes for base url.

--- a/src/ForBrowser/Shared/NavMenu.razor
+++ b/src/ForBrowser/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.Extensions.Configuration
+@using ForBrowser.Services
 @inject ServerAssets Assets;
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">ForBrowser</a>
@@ -46,11 +47,6 @@
             <NavLink class="nav-link" href="demo/LocalStore">
                 <span class="oi oi-browser" aria-hidden="true"></span>
                 Local store
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </li>
         <li class="nav-item px-3">
