--- a/src/ForBrowser/_Imports.razor
+++ b/src/ForBrowser/_Imports.razor
@@ -3,11 +3,12 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-
 @using Microsoft.Extensions.Logging
 
 @using ForBrowser
+@using ForBrowser.Services
 @using ForBrowser.Model
 @using ForBrowser.Shared
+@using ForBrowser.Parts
 
 @using kwd.BoxOBlazor.Demo.Parts
